[package]
name = "htminl"
version = "0.6.9"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
rust-version = "1.63"
description = "In-place minification of HTML file(s)."
repository = "https://github.com/Blobfolio/htminl"
readme = "README.md"
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <hello@blobfolio.com>"
copyright = "2022, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["./LICENSE", "0"]
extended-description = ""
revision = "1"
depends = "$auto"
section = "utils"
assets = [
    ["./target/x86_64-unknown-linux-gnu/release/htminl", "usr/bin/", "755"],
    ["./release/completions/htminl.bash", "etc/bash_completion.d/", "644"],
    ["./release/man/htminl.1.gz", "usr/share/man/man1/", "644"],
]

[package.metadata.bashman]
name = "HTMinL"
bash-dir = "./release/completions"
man-dir = "./release/man"
credits-dir = "./"

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information and exit."

[[package.metadata.bashman.switches]]
short = "-p"
long = "--progress"
description = "Show progress bar while working."

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print program version and exit."

[[package.metadata.bashman.options]]
short = "-l"
long = "--list"
label = "<FILE>"
description = "Read (absolute) file and/or directory paths from this text file, one entry per line."
path = true

[[package.metadata.bashman.arguments]]
label = "<PATH(s)…>"
description = "Any number of files and directories to crawl and crunch."

[build-dependencies]
dowser = "0.7.*"

[dependencies]
argyle = "0.6.*"
dactyl = "0.4.*"
dowser = "0.7.*"
html5ever = "=0.26.0"
rayon = "1.7.*"
tendril = "=0.4.3"
write_atomic = "0.3.*"

[dependencies.marked]
version = "0.3.*"
git = "https://github.com/joshstoik1/marked.git"
rev = "c9c5a31"

[dependencies.fyi_msg]
version = "0.10.*"
features = [ "progress" ]

[profile.release]
lto = true
codegen-units = 1
strip = true
