[package]
name = "htminl"
version = "0.8.3"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
description = "In-place minification of HTML file(s)."
repository = "https://github.com/Blobfolio/htminl"
readme = "README.md"
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <hello@blobfolio.com>"
copyright = "2024, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["./LICENSE", "0"]
extended-description = ""
revision = "1"
depends = "$auto"
section = "utils"
assets = [
    ["./target/release/htminl", "usr/bin/", "755"],
    ["./release/completions/htminl.bash", "etc/bash_completion.d/", "644"],
    ["./release/man/htminl.1.gz", "usr/share/man/man1/", "644"],
]

[package.metadata.bashman]
name = "HTMinL"
bash-dir = "./release/completions"
man-dir = "./release/man"
credits-dir = "./"

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information and exit."

[[package.metadata.bashman.switches]]
short = "-p"
long = "--progress"
description = "Show progress bar while working."

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print program version and exit."

[[package.metadata.bashman.options]]
short = "-l"
long = "--list"
label = "<FILE>"
description = "Read (absolute) file and/or directory paths from this text file — or STDIN if '-' — one entry per line, instead of or in addition to the trailing <PATH(S)>."
path = true

[[package.metadata.bashman.arguments]]
label = "<PATH(s)…>"
description = "Any number of files and directories to crawl and crunch."

[build-dependencies]
dowser = "0.9.*"

[dependencies]
argyle = "0.7.*"
dactyl = "0.7.*"
dowser = "0.9.*"
html5ever = "=0.26.0"
rayon = "1.9.*"
tendril = "=0.4.3"
write_atomic = "0.5.*"

[dependencies.marked]
version = "0.3.*"
git = "https://github.com/joshstoik1/marked.git"
rev = "c9c5a31"

[dependencies.fyi_msg]
version = "0.13.*"
features = [ "progress" ]

[profile.release]
lto = true
codegen-units = 1
strip = true
