[package]
name = "htminl"
version = "0.8.12"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
description = "In-place minification of HTML file(s)."
repository = "https://github.com/Blobfolio/htminl"
readme = "README.md"
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <josh@blobfolio.com>"
copyright = "2025, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["./LICENSE", "0"]
extended-description = ""
revision = "1"
depends = "$auto"
section = "utils"
assets = [
    ["./target/release/htminl", "usr/bin/", "755"],
    ["./release/completions/htminl.bash", "etc/bash_completion.d/", "644"],
    ["./release/man/htminl.1.gz", "usr/share/man/man1/", "644"],
]

[package.metadata.bashman]
name = "HTMinL"
bash-dir = "./release/completions"
man-dir = "./release/man"

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information and exit."

[[package.metadata.bashman.switches]]
short = "-p"
long = "--progress"
description = "Show progress bar while working."

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print program version and exit."

[[package.metadata.bashman.options]]
short = "-l"
long = "--list"
label = "<FILE>"
description = "Read (absolute) file and/or directory paths from this text file — or STDIN if '-' — one entry per line, instead of or in addition to the trailing <PATH(S)>."
path = true

[[package.metadata.bashman.arguments]]
label = "<PATH(s)…>"
description = "Any number of files and directories to crawl and crunch."

[build-dependencies]
argyle = "0.13.*"
dowser = "0.14.*"

[dependencies]
dactyl = "0.12.*"
dowser = "0.14.*"
rayon = "1.10.*"
tendril = "=0.4.3"
write_atomic = "0.7.*"

[dependencies.argyle]
version = "0.13.*"
features = [ "try_paths" ]

[dependencies.marked]
version = "0.3.*"
git = "https://github.com/joshstoik1/marked.git"
rev = "8acdc5c"

[dependencies.fyi_msg]
version = "2.2.*"
features = [ "signals" ]

[profile.release]
lto = true
codegen-units = 1
strip = true
