[package]
name = "htminl"
version = "0.3.6"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2018"
description = "In-place minification of HTML file(s)."
publish = false
build = "build.rs"

[package.metadata.deb]
maintainer = "Josh Stoik <hello@blobfolio.com>"
copyright = "2020, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["../LICENSE", "0"]
revision = "1"
depends = "$auto"
section = "utility"
assets = [
    ["../target/x86_64-unknown-linux-gnu/release/htminl", "usr/bin/", "755"],
    ["./misc/htminl.bash", "etc/bash_completion.d/", "644"],
    ["./misc/htminl.1.gz", "usr/share/man/man1/", "644"],
]

[build-dependencies.fyi_menu]
git = "https://github.com/Blobfolio/fyi.git"
branch = "master"

[dependencies]
tempfile-fast = "0.3.*"

[dependencies.htminl_core]
path = "../htminl_core"

[dependencies.fyi_menu]
git = "https://github.com/Blobfolio/fyi.git"
branch = "master"

[dependencies.fyi_msg]
git = "https://github.com/Blobfolio/fyi.git"
branch = "master"

[dependencies.fyi_witcher]
git = "https://github.com/Blobfolio/fyi.git"
branch = "master"

[features]
default = []
man = []
