[package]
name = "htminl"
version = "0.4.6"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2018"
description = "In-place minification of HTML file(s)."
repository = "https://github.com/Blobfolio/htminl"
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <hello@blobfolio.com>"
copyright = "2021, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["../LICENSE", "0"]
revision = "1"
depends = "$auto"
section = "utility"
assets = [
    ["../target/x86_64-unknown-linux-gnu/release/htminl", "usr/bin/", "755"],
    ["../release/completions/htminl.bash", "etc/bash_completion.d/", "644"],
    ["../release/man/htminl.1.gz", "usr/share/man/man1/", "644"],
]

[package.metadata.bashman]
name = "HTMinL"
bash-dir = "../release/completions"
man-dir = "../release/man"

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information."

[[package.metadata.bashman.switches]]
short = "-p"
long = "--progress"
description = "Show progress bar while working."

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print program version."

[[package.metadata.bashman.options]]
short = "-l"
long = "--list"
label = "<FILE>"
description = "Read file paths from this text file."
path = true

[[package.metadata.bashman.arguments]]
label = "<PATH(s)…>"
description = "Any number of files and directories to crawl and crunch."

[dependencies.fyi_menu]
git = "https://github.com/Blobfolio/fyi.git"
tag = "v0.5.4"

[dependencies.fyi_msg]
git = "https://github.com/Blobfolio/fyi.git"
tag = "v0.5.4"

[dependencies.fyi_witcher]
git = "https://github.com/Blobfolio/fyi.git"
tag = "v0.5.4"
features = [ "witching" ]

[dependencies.htminl_core]
path = "../htminl_core"

[dependencies.tempfile-fast]
git = "https://github.com/FauxFaux/tempfile-fast-rs.git"
rev = "7cd84b2"
