[package]
name = "htminl_core"
version = "0.4.7"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2018"
description = "Library for HTMinL."
repository = "https://github.com/Blobfolio/htminl"
publish = false

[dependencies]
html5ever = "*"
lazy_static = "1.4.*"
marked = "0.3.*"
regex = "1.4.*"
tendril = "0.4.*"

[dev-dependencies.criterion]
version = ">= 0.3.4"
default-features = false

[[bench]]
name = "lib"
harness = false
