[package]
name = "htminl_core"
version = "0.4.8"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2018"
description = "Library for HTMinL."
repository = "https://github.com/Blobfolio/htminl"
publish = false

[dependencies]
html5ever = "*"
lazy_static = "1.4.*"
marked = "0.3.*"
regex = "1.4.*"
tendril = "0.4.*"

[dev-dependencies.fyi_bench]
git = "https://github.com/Blobfolio/fyi.git"
branch = "feature/next"

[[bench]]
name = "lib"
harness = false
